--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,44 @@
 body {
-  background: linear-gradient(135deg, #001a67, #690101);
+  background: linear-gradient(100deg, #022aa0, #8b0202);
 }
-body {
-  background: #00dfff;
-  font-family: "Comic Sans MS", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 40px;
-  margin: 0;
-}
-
-.task-box {
-  background: #3399ff;
-  color: #ffeb3b;
-  font-size: 4rem;
-  font-weight: bold;
-  padding: 20px 60px;
-  border-radius: 20px;
-  margin-bottom: 20px;
-}
-
-.stats {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
-}
-
-.stats div {
-  background: #ff6f61;
-  padding: 10px 20px;
-  border-radius: 10px;
-  font-size: 1.2rem;
-  color: #ffeb3b;
-}
-
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 80px);
-  grid-template-rows: repeat(4, 80px);
-  gap: 5px;
+  grid-gap: 10px;
+  justify-content: center;
+  margin-top: 100px;
 }
-
-.cell {
+.card {
+  width: 89px;
+  height: 89px;
+  background-color: rgba(103, 0, 109, 0.219);
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.8rem;
+  font-size: 20px;
   font-weight: bold;
-  color: #ffeb3b;
   cursor: pointer;
-  transition: transform 0.1s;
+  transition: 0.3s;
+}
+.score-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #9406063c;
+  color: #43a009da;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  margin: 10px;
 }
 
-.cell:hover {
-  transform: scale(1.1);
-}
-
-.blue {
-  background: #3399ff;
-}
-.yellow {
-  background: #ffeb3b;
-  color: #3399ff;
+.question {
+  font-size: 40px;
+  margin: 20px 0;
+  color: rgba(217, 255, 0, 0.459);
+  font-weight: bold;
+  text-align: center;
 }
